[package]
name = "rust-network-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Tony Chuks Awunor <your-email@example.com>"]
description = "Memory-safe network security scanner for vulnerability assessment"
license = "MIT"
repository = "https://github.com/your-username/rust-network-scanner"
keywords = ["security", "network", "scanner", "vulnerability", "memory-safe"]
categories = ["network-programming", "development-tools"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "scan_network"
path = "examples/scan_network.rs"
